# VulkanAppRepo

./: .gitignore  CMakeLists.txt  Mesh.cpp  Mesh.h  MeshModel.cpp  MeshModel.h  README.md  Source.cpp  Utilities.h  VulkanApp.sln  VulkanApp.vcxproj  VulkanApp.vcxproj.filters  VulkanRenderer.cpp  VulkanRenderer.h  VulkanValidation.h  main.cpp
Shaders/: compile_shaders.bat  frag.spv  offscreen.frag  offscreen.vert  shader.frag  shader.vert  vert.spv
